# kdev-sourceinfo

./: CMakeLists.txt  Messages.sh  README.md  kdevsourceinfo.categories  kdevsourceinfo.json  sourceinfoinlinenoteprovider.cpp  sourceinfoinlinenoteprovider.h  sourceinfoplugin.cpp  sourceinfoplugin.h  sourceinfotoolview.cpp  sourceinfotoolview.h  sourceinfotoolview.ui
notes/: generictextnote.cpp  generictextnote.h  inlinenotebase.h  membersizenote.cpp  membersizenote.h
